Converter by Valselt v4

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,13 @@
                     </div>
             </div>
 
+            <div id="conversionLoader" class="hidden" style="margin-bottom: 20px; text-align: center;">
+                <div class="progress-container">
+                    <div class="progress-fill" id="conversionProgressFill"></div>
+                </div>
+                <p id="conversionStatusText" style="margin-top: 8px; font-size: 0.85rem; color: var(--text-muted);">Menyiapkan...</p>
+            </div>
+
             <button id="convertBtn" class="convert-btn" disabled>
                 Mulai Konversi
             </button>
