Converter by Valselt v9

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
     <main class="converter-card">
         <header>
-            <h1>File Converter</h1>
+            <img src="https://cdn.ivanaldorino.web.id/converter/cnvrtmiddle.png" alt="Logo Converter" class="app-logo">
             <p>Drag & drop file apapun, kami akan sesuaikan formatnya.</p>
         </header>
 
