Converter by Valselt v11

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Converter Local</title>
+    <title>CNVRT by Valselt</title>
     <link rel="icon" href="https://cdn.ivanaldorino.web.id/converter/cnvrtfavico.png" type="image/png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
