Converter by Valselt v12

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
     </script>
 </head>
 <body>
+    <div class="page-background">
+        <div class="blob blob-1"></div>
+        <div class="blob blob-2"></div>
+        <div class="blob blob-3"></div>
+    </div>
 
     <main class="converter-card">
         <header>
